--- a/config.toml
+++ b/config.toml
@@ -5,4 +5,8 @@ theme = "hero"
 enableRobotsTXT = true
 
 [params]
+description = "Kültéri és beltéri kivitelezési munkák Piliscsabán és környékén."
 areaServed = "Piliscsaba és környéke"
+phone = "+36709539785"
+email = "zoltankassai8@google.com"
+obfuscatedEmail = "zoltankassai8 [kukac] gmail [pont] com"
