--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,3 +10,4 @@ areaServed = "Piliscsaba és környéke"
 phone = "+36709539785"
 email = "zoltankassai8@google.com"
 obfuscatedEmail = "zoltankassai8 [kukac] gmail [pont] com"
+ogImage = piliscsaba-epitoipari-szolgaltatasok-og.jpg
