--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,4 +10,9 @@ areaServed = "Piliscsaba és környéke"
 phone = "+36709539785"
 email = "zoltankassai8@google.com"
 obfuscatedEmail = "zoltankassai8 [kukac] gmail [pont] com"
-ogImage = piliscsaba-epitoipari-szolgaltatasok-og.jpg
+
+ogContextName = "Kültéri és beltéri kivitelezési munkák"
+ogContextAddressLocality = "Piliscsaba"
+ogContextAddressCountry = "HU"
+ogHasOfferCatalogName = "Kivitelezési szolgáltatások"
+ogImage = "piliscsaba-epitoipari-szolgaltatasok-og.jpg"
