--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -13,6 +13,9 @@ obfuscatedEmail = "zoltankassai8 [kukac] gmail [pont] com"
 
 ogContextName = "Kültéri és beltéri kivitelezési munkák"
 ogContextAddressLocality = "Piliscsaba"
+ogContextStreetAddress = "—"
+ogContextPostalCode = "2081"
 ogContextAddressCountry = "HU"
+ogContextOpeningHours = "Mo-Fr 09:00-17:00"
 ogHasOfferCatalogName = "Kivitelezési szolgáltatások"
 ogImage = "piliscsaba-epitoipari-szolgaltatasok-og.jpg"
